# bridge-server

./: .coverage  .dir-locals.el  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  2025-01-02T19:05:36+0000.sql  2025-01-16T01:30:09+0000.sql  2025-01-16T14:48:07+0000.sql  2025-01-16T15:35:05+0000.sql  2025-01-23T15:00:12+0000.sql  2025-01-25T14:22:37+0000.sql  2025-02-01T21:36:20+0000.sql  2025-02-03T23:17:03+0000.sql  2025-02-15T17:37:02+0000.sql  2025-04-14T17:16:32+0000.sql  2025-05-09T20:06:19+0000-hand-in-progress.sql  BOOG  CLAUDE.md  Dockerfile  README.auth.md  README.boards.md  README.bot-promotion.md  README.branch.md  README.branch.mdd  README.branch.org  README.developer.md  README.docker.md  README.docker.ubuntu.setup.md  README.events.org  README.hetzner.setup.md  README.hosting.md  README.md  README.messages.md  README.messages.org  README.monitoring.md  README.perf.md  README.postgres.md  README.related.md  README.sentry.md  (+74 more)
api-bot/: apibot.py  pyproject.toml  tests.py
bridge_server/: asgi.py  runner.py  settings.py  urls.py  wsgi.py
bs_app/: apps.py  models.py  tests.py  urls.py  views.py
bs_app/fixtures/: skeleton.json
bs_app/migrations/: 0001_initial.py  0002_player_name_alter_player_table.py  0003_alter_club_name_alter_player_name_and_more.py
docs/: DEPLOY.google-oauth.md  README.api.md  README.auth.md  README.deployment-risk.md  README.google-oauth.md  README.hosting.md  README.monitoring.md  README.perf.md  README.postgres.md  README.related.md  README.ubuntu-hetz.setup.md  README.ubuntu.setup.md  SETUP.google-oauth.md  django-settings-vs-how-we-run.org  downtime-study-guide.txt  frontend-ideas.md  how-hand-div-gets-rendered.md  view-and-control.org
docs/perf/: README.perf.md  observations.md
grafana/: Dockerfile  reasonable-looking-dashboard.json
grafana/dashboards/: reasonable-looking-dashboard.json
grafana/provisioning/datasources/: datasource.yml
grafana/provisioning/plugins/: plugins.yml
project/: .gitignore  conftest.py  manage.py  test_auto_sse_updates.py  types
project/app/: adapters.py  apps.py  channelmanager.py  conftest.py  forms.py  models.py  serializers.py  sse_channels.py  sse_events.py  table.org  test_api.py  test_archive_view.py  test_auth.py  test_board_view.py  test_bot_toggle_race.py  test_completed_tournament_anonymous_access.py  test_dummy_checkbox.py  test_hand.py  test_hand_events.py  test_hand_view.py  test_hand_view_dispatcher.py  test_handaction.py  test_handrecord.py  test_movements.py  test_oauth.py  test_perf.py  test_player.py  test_player_view.py  test_scoring.py  test_table_view.py  test_tournament_mechanics.py  test_tournaments.py  test_ui_playwright.py  test_views.py  test_visibility.py  tests.py  testutils.py  urls.py  views.py
project/app/auth/: backends.py
project/app/fixtures/: .gitattributes  big_repro.json  boom.json  completed-tournament-20-players.json  four-hands.json  fresh_tournament.json  jd-souther-is-ready-to-play-a-heart.json  nearly_completed_tournament.json  now_what.json  played_almost_to_completion.json  played_to_completion.json  skeleton.json  smoke-case-1.json  two_boards_one_of_which_is_played_almost_to_completion.json  two_by_two_all_tied.json  usual_setup.json
project/app/middleware/: add_git_commit_hash.py  add_request_id.py  better_tz_detect.py  no_index.py  simple_access_log.py  swallow_annoying_exception.py
project/app/migrations/: 0001_initial.py  0002_player_looking_for_partner.py  0002_remove_player_name_player_user.py  0002_remove_player_table_seat_player_seat_and_more.py  0002_remove_seat_app_seat_direction_valid_and_more.py  0003_alter_player_options.py  0003_alter_player_partner_delete_call.py  0003_remove_table_club_remove_table_composite_primary_key_and_more.py  0003_seat_cards.py  0004_alter_seat_cards.py  0004_lobbymessage.py  0005_playermessage.py  0006_remove_playermessage_from_player_and_more.py  0007_lobby_remove_message_player_recipient_and_more.py  0008_remove_seat_no_more_than_one_player_per_table_and_more.py  0009_alter_seat_options.py  0010_player_app_player_cant_be_own_partner.py  0011_board.py  0012_remove_board_cards_board_east_cards_and_more.py  0013_handrecord_call_play.py  0014_remove_handrecord_seat_handrecord_table_and_more.py  0015_remove_board_table_handrecord_board.py  0016_usermitplaya.py  0017_player_is_human.py  0018_play_app_play_a_card_can_be_played_only_once.py  0019_alter_seat_player.py  0020_play_won_its_trick.py  0021_rename_handrecord_handaction.py  0022_rename_handaction_hand.py  0023_remove_player_is_human_and_more.py  0024_alter_hand_board_alter_seat_player.py  0025_hand_open_access.py  0026_alter_hand_open_access.py  0027_remove_play_won_its_trick.py  0028_remove_seat_app_seat_direction_valid_and_more.py  0029_table_tempo_seconds.py  0030_board_number.py  0031_auto_20241106_1511.py  0032_alter_board_number.py  0033_player_currently_seated.py  (+102 more)
project/app/models/: __init__.py  board.py  call.py  common.py  hand.py  handaction.py  handrecord.py  lobby.py  message.py  playaz.py  player.py  seat.py  signups.py  table.py  throttle.py  tournament.py  types.py  utils.py
project/app/smoke_tests/: test_archive_view.py  test_important_views.py
project/app/static/: .gitattributes
project/app/template/: context_processors.py
project/app/templates/: 3x3-trick-display.html  403.html  404.html  auction-partial.html  auction.html  base.html  base_player_detail.html  bidding-box-partial.html  bidding-box.html  board_archive.html  board_list.html  bot-checkbox-partial.html  bot-checkbox-sse.html  bot-checkbox.html  carousel_style_auction.html  carousel_style_play.html  chat-html-partial.html  chat-scripts.js  (+37 more)
project/project/: .coverage  asgi.py  base_settings.py  dev_settings.py  prod_settings.py  settings.py  test_settings.py  urls.py
prometheus/: Dockerfile  prometheus.yml
stubs/django_filters-stubs/: __init__.pyi  filterset.pyi  views.pyi
stubs/django_tables2-stubs/: __init__.pyi  columns.pyi  tables.pyi  utils.pyi  views.pyi
templates/: home.html
trouble/: 2026-01-18T17:10:28+0000.sql  wassup.txt
(+56 files in other folders)
