[project]
name = "bridge_server"
version = "0.1.0"
description = "An online bridge game"
readme = "README.md"
authors = [{name = "Eric Hanchrow", email= "eric.hanchrow@gmail.com"}]
requires-python = ">=3.10,<4.0"

[tool.poetry.dependencies]
django = "^5.1"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
faker = "^26.0.0"
more-itertools = "^10.3.0"
tqdm = "^4.66.4"
bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "b236aefd7f60dc9f195fa9c162ac5196d49dd003" }
#bridge = {path = "../library", develop = true}
django-eventstream = "^5.3.0"
daphne = "^4.1.2"
django-template-partials = "^24.4"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
retrying = "^1.3.4"
sseclient = "^0.0.27"
types-requests = "^2.32.0.20240712"
platformdirs = "^4.2.2"
sentry-sdk = "^2.14.0"
docutils = "^0.21.2"
django-fastdev = "^1.12.0"
# beware of https://github.com/psycopg/psycopg/issues/888
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-log-request-id = "^2.1.0"
py-spy = "^0.4.0"
types-tabulate = "^0.9.0.20241207"
pyinstrument = "^5.0.1"

[tool.djlint]
use_gitignore=true
ignore="H016,H020,H021,H023,H030,H031"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
django-coverage-plugin = "^3.1.0"
django-types = "^0.19.1"
mypy = "^1.11.2"
types-tqdm = "^4.66.0.20240417"
python-lsp-server = {extras = ["autopep8", "flake8", "mccabe", "pyflakes", "pylint", "rope", "test", "websockets", "yapf"], version = "*"}
logging-tree = "^1.10"
ruff = "*"
ipdb = "^0.13.13"
pytest-django = "^4.7.0"
pytest-profiling = "^1.7.0"
pylsp-mypy = "^0.6.9"
python-lsp-black = "^2.0.0"
pyls-memestra = "^0.0.16"
pylsp-rope = "^0.1.17"
python-lsp-ruff = "^2.2.2"
pytest-xdist = "^3.6.1"
freezegun = "^1.5.1"

[tool.pydocstyle]
# Disable pydocstyle entirely.
# This seems cleaner than uninstalling it.
# We hates it, we does.
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D212", "D213"]

[tool.ruff]
line-length = 100

#https://docs.astral.sh/ruff/rules/unused-import/
#https://docs.astral.sh/ruff/rules/print/
#https://docs.astral.sh/ruff/rules/p-print/
[tool.ruff.lint]
ignore = ["F401", "T201", "T203"]

[tool.coverage.run]
dynamic_context = "test_function"
plugins = [
    'django_coverage_plugin',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="project.dev_settings"
python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
log_format = "%(asctime)s %(levelname)s %(filename)s %(lineno)d %(funcName)s %(message)s"
