[project]
name = "bridge_server"
version = "0.1.0"
description = "An online bridge game"
readme = "README.md"
authors = [{name = "Eric Hanchrow", email= "eric.hanchrow@gmail.com"}]
requires-python = ">=3.10,<4.0"

[tool.poetry.dependencies]
django = "5.*"
django-debug-toolbar = "4.*"
django-extensions = "3.*"
faker = "^26.0.0"
more-itertools = "^10.3.0"
tqdm = "^4.66.4"
bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "055e73cf1d423a47933f3dd4e7027b8e7ba5f1ad" }
#bridge = {path = "../library", develop = true}
django-eventstream = "5.*"
daphne = "4.*"
django-template-partials = "^24.4"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
retrying = "^1.3.4"
sseclient = "^0.0.27"
types-requests = "^2.32.0.20240712"
platformdirs = "^4.2.2"
sentry-sdk = "2.*"
docutils = "^0.21.2"
django-fastdev = "^1.12.0"
# beware of https://github.com/psycopg/psycopg/issues/888
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-log-request-id = "^2.1.0"
py-spy = "^0.4.0"
types-tabulate = "^0.9.0.20241207"
pyinstrument = "^5.0.1"
humanize = "^4.11.0"
django-tz-detect = "^0.5.0"
django-tables2 = "2.*"

[tool.djlint]
use_gitignore=true
ignore="H016,H020,H021,H023,H030,H031"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
ipython = "8.*"
django-coverage-plugin = "3.*"
django-types = "0.*"
mypy = "1.*"
types-tqdm = "^4.66.0.20240417"
python-lsp-server = {extras = ["autopep8", "flake8", "mccabe", "pyflakes", "pylint", "rope", "websockets", "yapf"], version = "*"}
logging-tree = "1.*"
ruff = "*"
ipdb = "^0.13.13"
pytest-django = "4.*"
pytest-profiling = "1.*"
pylsp-mypy = "0.*"
python-lsp-black = "2.*"
pylsp-rope = "0.*"
python-lsp-ruff = "2.*"
pytest-xdist = "3.*"
freezegun = "1.*"
# Handy for monitoring parallel test runs (i.e., pytest-xdist) -- use htop to look for "pytest"
setproctitle = "1.*"


[tool.pydocstyle]
# Disable pydocstyle entirely.
# This seems cleaner than uninstalling it.
# We hates it, we does.
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D212", "D213"]

[tool.ruff]
line-length = 100
target-version = "py313"
unsafe-fixes = true

#https://docs.astral.sh/ruff/rules/print/
#https://docs.astral.sh/ruff/rules/p-print/
[tool.ruff.lint]
ignore = ["T201", "T203"]

[tool.coverage.run]
dynamic_context = "test_function"
plugins = [
    'django_coverage_plugin',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="project.dev_settings"
python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
log_format = "%(asctime)s %(thread)d %(levelname)s %(filename)s %(lineno)d %(funcName)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
