[project]
name = "bridge_server"
version = "0.1.0"
description = "An online bridge game"
authors = [{ name = "Eric Hanchrow", email = "eric.hanchrow@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "django==5.*",
    "django-debug-toolbar",
    "django-extensions",
    "faker>=26.0.0,<27",
    "more-itertools>=10.3.0,<11",
    "tqdm",
    "bridge",
    "django-eventstream",
    "daphne",
    "django-template-partials",
    "whitenoise[brotli]>=6.7.0,<7",
    "retrying>=1.3.4,<2",
    "sseclient",
    "requests==2.*",
    "types-requests==2.*",
    "platformdirs",
    "sentry-sdk[django]>=2.29.1,<3",
    "docutils",
    "django-fastdev",
    "psycopg[binary]",
    "django-log-request-id>=2.1.0,<3",
    "py-spy>=0.4.0,<0.5",
    "types-tabulate>=0.9.0.20241207,<0.10",
    "pyinstrument>=5.0.1,<6",
    "humanize>=4.11.0,<5",
    "django-tz-detect>=0.5.0,<0.6",
    "django-tables2==2.*",
    "django-prometheus",
    "pyroscope-io>=0.8.11,<0.9 ; sys_platform != 'darwin'",
    "django-filter~=25.1",
    "redis>=6.2.0,<7",
    "django-browser-reload>=1.21.0",
    "django-watchfiles>=1.4.0",
    "django-http-compression>=1.0.0",
]

[dependency-groups]
dev = [
    "ipython==8.*",
    "django-coverage-plugin==3.*",
    "django-types==0.*",
    "mypy==1.*",
    "types-tqdm>=4.66.0.20240417,<5",
    "python-lsp-server[autopep8, flake8, mccabe, pyflakes, pylint, rope, websockets, yapf]",
    "logging-tree==1.*",
    "ruff",
    "ipdb>=0.13.13,<0.14",
    "pytest-django==4.*",
    "pytest-profiling==1.*",
    "pylsp-mypy==0.*",
    "python-lsp-black==2.*",
    "pylsp-rope==0.*",
    "python-lsp-ruff==2.*",
    "pytest-xdist==3.*",
    "freezegun==1.*",
    "setproctitle==1.*",
    "basedpyright>=1.31.6",
]

[tool.basedpyright]
include = ["project"]

[tool.uv]
package = false

[tool.uv.sources]
# bridge = { path = "../library" }
bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "1d0ff80ecc96a1234b1df57441ce0a49a30d100c" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.djlint]
use_gitignore=true
ignore="H016,H020,H021,H023,H030,H031"

[tool.mypy]
exclude = "/migrations/"

[tool.pydocstyle]
# Disable pydocstyle entirely.
# This seems cleaner than uninstalling it.
# We hates it, we does.
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D212", "D213"]

[tool.ruff]
line-length = 100
target-version = "py313"
unsafe-fixes = true

[tool.ruff.lint]
ignore = ["T201", "T203"]

[tool.coverage.run]
dynamic_context = "test_function"
plugins = [
    'django_coverage_plugin',
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="project.dev_settings"
python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
log_format = "%(asctime)s %(thread)d %(levelname)s %(filename)s %(lineno)d %(funcName)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
