[tool.poetry]
name = "api-bot"
version = "0.1.0"
description = ""
authors = ["Eric Hanchrow <eric.hanchrow@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sseclient = "^0.0.27"
retrying = "^1.3.4"
requests = "^2.32.3"
types-requests = "^2.32.0.20240914"
more-itertools = "^10.5.0"
bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "2b0e778bf3cfb32a3e31ffbba48033b7cd1ecadd" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
